--- a/index.html
+++ b/index.html
@@ -1,150 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hossein Rajabloo | Engineering Portfolio</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hossein Rajabloo | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet">
+  <script>
+    function switchLang(lang) {
+      document.documentElement.lang = lang;
+      document.body.classList.toggle('rtl', lang === 'fa');
+    }
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark');
+    }
+  </script>
   <style>
     body {
-      font-family: 'Inter', 'Vazirmatn', sans-serif;
-      background: linear-gradient(to right, #f0f4f8, #e2e8f0);
-      color: #111;
-      transition: 0.3s ease-in-out;
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #f4f7fa, #e9ecf1);
+      color: #222;
+      padding: 0 20px;
+      transition: background 0.5s, color 0.5s;
     }
-    body.dark-mode {
-      background: linear-gradient(to right, #1f2937, #111827);
-      color: #e5e7eb;
+    body.dark {
+      background: linear-gradient(135deg, #1e1e2f, #2a2a40);
+      color: #fff;
+    }
+    body.rtl {
+      direction: rtl;
+      text-align: right;
     }
     header {
-      backdrop-filter: blur(14px);
-      background-color: rgba(255,255,255,0.7);
-      border-bottom: 1px solid rgba(0,0,0,0.05);
+      text-align: center;
+      padding: 40px 20px 20px;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 30px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: inherit;
+      text-decoration: none;
+      font-weight: bold;
+      position: relative;
+    }
+    nav a::after {
+      content: '';
+      display: block;
+      height: 2px;
+      background: #00ffc3;
+      width: 0%;
+      transition: width 0.3s;
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+    }
+    nav a:hover::after {
+      width: 100%;
     }
     .glass {
-      background: rgba(255,255,255,0.5);
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 20px;
       border-radius: 16px;
-      padding: 2rem;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      margin-bottom: 2rem;
+      backdrop-filter: blur(8px);
+      transition: transform 0.3s ease;
     }
-    .btn-glass {
-      background: rgba(255,255,255,0.3);
-      border: none;
-      backdrop-filter: blur(6px);
-      padding: 0.6rem 1.2rem;
-      border-radius: 12px;
-      transition: 0.3s;
+    .glass:hover {
+      transform: scale(1.02);
     }
-    .btn-glass:hover {
-      background: rgba(255,255,255,0.5);
+    .container {
+      max-width: 1000px;
+      margin: auto;
     }
-    .lang-switch {
+    h2 {
+      margin-top: 40px;
+      font-size: 1.8rem;
+    }
+    .project-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    footer {
+      text-align: center;
+      padding: 40px 20px;
+      font-size: 0.9rem;
+      color: #888;
+    }
+    .lang-toggle, .dark-toggle {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      margin-left: 10px;
       cursor: pointer;
-      margin-right: 1rem;
+      padding: 5px 10px;
+      background: #00ffc3;
+      color: #000;
+      border-radius: 8px;
+      z-index: 999;
     }
-    .category-title {
-      font-weight: bold;
-      border-bottom: 2px solid #94a3b8;
-      padding-bottom: 0.4rem;
-      margin-bottom: 1.2rem;
+    .lang-toggle { right: 10px; }
+    .dark-toggle { right: 120px; }
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    button[type="submit"] {
+      background: #00ffc3;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    button[type="submit"]:hover {
+      background: #00dab3;
     }
   </style>
 </head>
-<body lang="en">
-<header class="p-3 d-flex justify-content-between align-items-center">
-  <h1 class="h5 mb-0">Hossein Rajabloo</h1>
-  <div>
-    <span class="lang-switch" onclick="switchLang()">🌐 EN / FA</span>
-    <button class="btn btn-glass" onclick="toggleDarkMode()">🌓</button>
+<body>
+  <button class="lang-toggle" onclick="switchLang(document.documentElement.lang === 'en' ? 'fa' : 'en')">🌐</button>
+  <button class="dark-toggle" onclick="toggleDarkMode()">🌙</button>
+
+  <header>
+    <h1>Hossein Rajabloo</h1>
+    <p>Engineer | Python Developer | ISI Researcher</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#resume">CV</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <div class="container">
+    <section id="about" class="glass">
+      <h2>About Me</h2>
+      <p>BSc in Mechanical Engineering from Mazandaran University of Science & Tech. Researcher in fuel cell & radiative cooling, and active Python + ML developer. Currently Vocational Automotive Instructor at Ministry of Education, Iran.</p>
+    </section>
+
+    <section id="projects" class="glass">
+      <h2>Projects</h2>
+      <div id="project-list" class="project-container"></div>
+    </section>
+
+    <section id="resume" class="glass">
+      <h2>Resume</h2>
+      <ul>
+        <li>📚 B.Sc. Mechanical Engineering (2012–2017)</li>
+        <li>🧪 ISI Researcher (2 papers: CIVILICA + Elsevier)</li>
+        <li>🛠️ Automotive Instructor, Ministry of Education (since 2023)</li>
+        <li>👨‍🏫 Instructor of HVAC in Technical & Vocational Org. (2017–2019)</li>
+        <li>👨‍💻 Python, ANSYS, SolidWorks, ML & GUI Dev</li>
+      </ul>
+    </section>
+
+    <section id="contact" class="glass">
+      <h2>Contact Me</h2>
+      <form action="https://formspree.io/f/your-email" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </section>
   </div>
-</header>
 
-<main class="container py-4">
+  <footer>
+    &copy; 2025 Hossein Rajabloo — All rights reserved.
+  </footer>
 
-  <section class="glass">
-    <h2 class="category-title" data-en="About Me" data-fa="درباره من">About Me</h2>
-    <p id="about"></p>
-  </section>
-
-  <section class="glass">
-    <h2 class="category-title" data-en="Projects" data-fa="پروژه‌ها">Projects</h2>
-    <div id="projects" class="row row-cols-1 row-cols-md-2 g-4"></div>
-  </section>
-
-  <section class="glass">
-    <h2 class="category-title" data-en="Resume" data-fa="رزومه">Resume</h2>
-    <ul>
-      <li>B.Sc. Mechanical Engineering, Mazandaran University of Science & Technology (2012–2017)</li>
-      <li>Instructor at Ministry of Education (2023–Now)</li>
-      <li>HVAC Trainer at TVTO (2017–2019)</li>
-      <li>Published in Civilica; ISI paper under review in Elsevier</li>
-    </ul>
-  </section>
-
-  <section class="glass">
-    <h2 class="category-title" data-en="Contact" data-fa="تماس با من">Contact</h2>
-    <form action="https://formsubmit.co/hosseinrj1994@gmail.com" method="POST">
-      <div class="mb-2"><input type="text" name="name" class="form-control" placeholder="Name" required></div>
-      <div class="mb-2"><input type="email" name="email" class="form-control" placeholder="Email" required></div>
-      <div class="mb-2"><textarea name="message" class="form-control" rows="4" placeholder="Message" required></textarea></div>
-      <button type="submit" class="btn btn-primary">Send</button>
-    </form>
-  </section>
-
-</main>
-
-<footer class="text-center py-3">
-  <small>© 2025 Hossein Rajabloo — Built with 💡 and hosted on GitHub Pages</small>
-</footer>
-
-<script>
-const aboutText = {
-  en: `Mechanical engineering graduate, ISI researcher, vocational instructor, and Python + AI enthusiast. Skilled in SolidWorks, ANSYS, and data-driven simulations.`,
-  fa: `فارغ‌التحصیل مهندسی مکانیک، پژوهشگر ISI، مدرس فنی‌و‌حرفه‌ای و علاقه‌مند به پایتون و هوش مصنوعی. مسلط به سالیدورک، انسیس و شبیه‌سازی داده‌محور.`
-};
-
-function switchLang() {
-  const lang = document.body.lang === 'en' ? 'fa' : 'en';
-  document.body.lang = lang;
-  document.getElementById('about').innerText = aboutText[lang];
-  document.querySelectorAll('[data-en]').forEach(el => {
-    el.innerText = el.dataset[lang];
-  });
-}
-
-function toggleDarkMode() {
-  document.body.classList.toggle("dark-mode");
-}
-
-function loadProjects() {
-  fetch("projects.json")
-    .then(res => res.json())
-    .then(data => {
-      const container = document.getElementById("projects");
-      data.forEach(p => {
-        container.innerHTML += `
-          <div class="col">
-            <div class="card h-100 glass border-0">
-              <div class="card-body">
-                <h5 class="card-title">${p.title}</h5>
-                <p class="card-text">${p.description}</p>
-              </div>
-            </div>
-          </div>
-        `;
+  <script>
+    fetch('projects.json')
+      .then(response => response.json())
+      .then(projects => {
+        const container = document.getElementById('project-list');
+        projects.forEach(project => {
+          const card = document.createElement('div');
+          card.className = 'glass';
+          card.innerHTML = `
+            <h3>${project.title}</h3>
+            <p>${project.description}</p>
+            <a href="${project.link}" target="_blank">View Project</a>
+          `;
+          container.appendChild(card);
+        });
       });
-    });
-}
-
-document.addEventListener("DOMContentLoaded", () => {
-  document.getElementById("about").innerText = aboutText.en;
-  loadProjects();
-});
-</script>
+  </script>
 </body>
 </html>
