--- a/index.html
+++ b/index.html
@@ -1,201 +1,91 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hossein Rajabloo | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet">
-  <script>
-    function switchLang(lang) {
-      document.documentElement.lang = lang;
-      document.body.classList.toggle('rtl', lang === 'fa');
-    }
-    function toggleDarkMode() {
-      document.body.classList.toggle('dark');
-    }
-  </script>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #f4f7fa, #e9ecf1);
-      color: #222;
-      padding: 0 20px;
-      transition: background 0.5s, color 0.5s;
-    }
-    body.dark {
-      background: linear-gradient(135deg, #1e1e2f, #2a2a40);
-      color: #fff;
-    }
-    body.rtl {
-      direction: rtl;
-      text-align: right;
-    }
-    header {
-      text-align: center;
-      padding: 40px 20px 20px;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-bottom: 30px;
-      flex-wrap: wrap;
-    }
-    nav a {
-      color: inherit;
-      text-decoration: none;
-      font-weight: bold;
-      position: relative;
-    }
-    nav a::after {
-      content: '';
-      display: block;
-      height: 2px;
-      background: #00ffc3;
-      width: 0%;
-      transition: width 0.3s;
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-    }
-    nav a:hover::after {
-      width: 100%;
-    }
-    .glass {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 16px;
-      backdrop-filter: blur(8px);
-      transition: transform 0.3s ease;
-    }
-    .glass:hover {
-      transform: scale(1.02);
-    }
-    .container {
-      max-width: 1000px;
-      margin: auto;
-    }
-    h2 {
-      margin-top: 40px;
-      font-size: 1.8rem;
-    }
-    .project-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-    footer {
-      text-align: center;
-      padding: 40px 20px;
-      font-size: 0.9rem;
-      color: #888;
-    }
-    .lang-toggle, .dark-toggle {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      margin-left: 10px;
-      cursor: pointer;
-      padding: 5px 10px;
-      background: #00ffc3;
-      color: #000;
-      border-radius: 8px;
-      z-index: 999;
-    }
-    .lang-toggle { right: 10px; }
-    .dark-toggle { right: 120px; }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-    button[type="submit"] {
-      background: #00ffc3;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    button[type="submit"]:hover {
-      background: #00dab3;
-    }
-  </style>
-</head>
-<body>
-  <button class="lang-toggle" onclick="switchLang(document.documentElement.lang === 'en' ? 'fa' : 'en')">🌐</button>
-  <button class="dark-toggle" onclick="toggleDarkMode()">🌙</button>
+import { Card, CardContent } from "@/components/ui/card";
+import { Button } from "@/components/ui/button";
+import { motion } from "framer-motion";
+import { Sparkles, Globe2, FileText, Send } from "lucide-react";
 
-  <header>
-    <h1>Hossein Rajabloo</h1>
-    <p>Engineer | Python Developer | ISI Researcher</p>
-  </header>
+export default function InfographicPortfolio() {
+  const projects = [
+    {
+      title: "Engine Efficiency Plot",
+      description:
+        "Visualizing mechanical efficiency trends under different loads using real data.",
+      link: "https://github.com/HowsseinRj/Python-Simulations/blob/main/engine_efficiency_plot.py",
+    },
+    {
+      title: "Fuel Efficiency ML Prediction",
+      description:
+        "Predict car fuel consumption with ML. Includes regression & visualization.",
+      link: "https://github.com/HowsseinRj/Python-Simulations/blob/main/fuel_efficiency_ml_advanced.py",
+    },
+    {
+      title: "Desktop Fuel Predictor GUI",
+      description:
+        "Tkinter-based app for live car efficiency prediction using trained models.",
+      link: "https://github.com/HowsseinRj/Python-Simulations/blob/main/fuel_predict_gui.py",
+    },
+  ];
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#resume">CV</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  return (
+    <main className="min-h-screen bg-gradient-to-b from-gray-950 to-gray-900 text-white font-sans">
+      <section className="text-center py-12 px-4">
+        <motion.h1
+          initial={{ opacity: 0, y: -20 }}
+          animate={{ opacity: 1, y: 0 }}
+          transition={{ duration: 0.8 }}
+          className="text-4xl md:text-5xl font-bold mb-4"
+        >
+          Hossein Rajabloo | Mechanical Engineer & AI Enthusiast
+        </motion.h1>
+        <motion.p
+          initial={{ opacity: 0 }}
+          animate={{ opacity: 1 }}
+          transition={{ delay: 0.4, duration: 0.8 }}
+          className="text-lg text-gray-400 max-w-2xl mx-auto"
+        >
+          Specialized in engineering simulations, machine learning and real-world energy systems. 🚀
+        </motion.p>
+      </section>
 
-  <div class="container">
-    <section id="about" class="glass">
-      <h2>About Me</h2>
-      <p>BSc in Mechanical Engineering from Mazandaran University of Science & Tech. Researcher in fuel cell & radiative cooling, and active Python + ML developer. Currently Vocational Automotive Instructor at Ministry of Education, Iran.</p>
-    </section>
+      <section className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 px-6 pb-12">
+        {projects.map((p, index) => (
+          <Card key={index} className="bg-gray-800 border-none rounded-2xl shadow-lg">
+            <CardContent className="p-6">
+              <div className="flex items-center gap-4 mb-4">
+                <Sparkles className="text-yellow-400" />
+                <h3 className="text-xl font-semibold">{p.title}</h3>
+              </div>
+              <p className="text-gray-400 mb-4">{p.description}</p>
+              <a href={p.link} target="_blank" rel="noopener noreferrer">
+                <Button className="w-full">View on GitHub</Button>
+              </a>
+            </CardContent>
+          </Card>
+        ))}
+      </section>
 
-    <section id="projects" class="glass">
-      <h2>Projects</h2>
-      <div id="project-list" class="project-container"></div>
-    </section>
-
-    <section id="resume" class="glass">
-      <h2>Resume</h2>
-      <ul>
-        <li>📚 B.Sc. Mechanical Engineering (2012–2017)</li>
-        <li>🧪 ISI Researcher (2 papers: CIVILICA + Elsevier)</li>
-        <li>🛠️ Automotive Instructor, Ministry of Education (since 2023)</li>
-        <li>👨‍🏫 Instructor of HVAC in Technical & Vocational Org. (2017–2019)</li>
-        <li>👨‍💻 Python, ANSYS, SolidWorks, ML & GUI Dev</li>
-      </ul>
-    </section>
-
-    <section id="contact" class="glass">
-      <h2>Contact Me</h2>
-      <form action="https://formspree.io/f/your-email" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </section>
-  </div>
-
-  <footer>
-    &copy; 2025 Hossein Rajabloo — All rights reserved.
-  </footer>
-
-  <script>
-    fetch('projects.json')
-      .then(response => response.json())
-      .then(projects => {
-        const container = document.getElementById('project-list');
-        projects.forEach(project => {
-          const card = document.createElement('div');
-          card.className = 'glass';
-          card.innerHTML = `
-            <h3>${project.title}</h3>
-            <p>${project.description}</p>
-            <a href="${project.link}" target="_blank">View Project</a>
-          `;
-          container.appendChild(card);
-        });
-      });
-  </script>
-</body>
-</html>
+      <section className="bg-gray-950 py-12 px-6 text-center">
+        <h2 className="text-3xl font-bold mb-4">Get in Touch</h2>
+        <p className="text-gray-400 mb-6">
+          Want to collaborate or ask a question? Reach out via the options below:
+        </p>
+        <div className="flex justify-center gap-4 flex-wrap">
+          <a href="https://howsseinrj.github.io/Python-Simulations" target="_blank">
+            <Button className="bg-blue-600 hover:bg-blue-700">
+              <Globe2 className="mr-2" /> Website
+            </Button>
+          </a>
+          <a href="mailto:hosseinrj1994@gmail.com">
+            <Button className="bg-green-600 hover:bg-green-700">
+              <Send className="mr-2" /> Email Me
+            </Button>
+          </a>
+          <a href="https://github.com/HowsseinRj" target="_blank">
+            <Button className="bg-purple-600 hover:bg-purple-700">
+              <FileText className="mr-2" /> GitHub
+            </Button>
+          </a>
+        </div>
+      </section>
+    </main>
+  );
+}
